--- a/index.html
+++ b/index.html
@@ -11,47 +11,47 @@
 
     <!-- Top Bar -->
     <div class="top-bar">
-      <div class="rank-badge">⛏️ 5</div>
+      <div class="rank-badge">⛏️</div>
       <div class="resources">
-        <div class="resource"><span>🪨</span> 561</div>
-        <div class="resource"><span>⚗️</span> 43</div>
-        <div class="resource"><span>💰</span> 54</div>
+        <div class="resource"><span>🪨</span></div>
+        <div class="resource"><span>⚗️</span></div>
+        <div class="resource"><span>💰</span></div>
       </div>
       <div class="progress">
-        <div class="progress-fill" style="width: 30%;"></div>
+        <div class="progress-fill" style="width: 0%;"></div>
       </div>
     </div>
 
     <!-- Mission Goals -->
     <div class="missions">
       <div class="mission">🔓 Unlock Ore</div>
-      <div class="mission">🛣️ Own Shafts (1/25)</div>
-      <div class="mission">🌍 Collect Land (12.55B / 30AA)</div>
+      <div class="mission">🛣️ Own Shafts (0/25)</div>
+      <div class="mission">🌍 Collect Land (0 / 30AA)</div>
     </div>
 
     <!-- Main Production Panel -->
     <div class="main-panel">
-      <div class="ore-display">⛏️ 69.21 AA ORE</div>
+      <div class="ore-display">⛏️ 0 ORE</div>
 
       <!-- Production Tiers -->
       <div class="tier red">
         <div class="tier-info">
-          <span class="output">+654.25 T / SEC</span>
-          <button class="buy-button">BUY x561 DRILLERS</button>
+          <span class="output">+0 / SEC</span>
+          <button class="buy-button">BUY DRILLERS</button>
         </div>
       </div>
 
       <div class="tier red">
         <div class="tier-info">
-          <span class="output">32.67 B ORE</span>
-          <button class="buy-button">BUY x561 SHAFTS</button>
+          <span class="output">0 ORE</span>
+          <button class="buy-button">BUY SHAFTS</button>
         </div>
       </div>
 
       <div class="tier red">
         <div class="tier-info">
-          <span class="output">23.26 M ORE</span>
-          <button class="buy-button">BUY x561 ELEVATORS</button>
+          <span class="output">0 ORE</span>
+          <button class="buy-button">BUY ELEVATORS</button>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
       <div class="nav-item">🎴</div>
       <div class="nav-item">📁</div>
       <div class="nav-item">❄️</div>
-      <div class="nav-item chest">🪙<span class="timer">1d 2h</span></div>
+      <div class="nav-item chest">🪙<span class="timer">NEW</span></div>
     </div>
   </div>
 </body>
